force-app/main/default/objects/Strain__c/Strain__c.object-meta.xml
<CustomObject>
    <label>Strain</label>
    <nameField>
        <label>Strain</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>