force-app/main/default/objects/Strain__c/fields/CbdLevel__c.field-meta.xml
<CustomField>
    <fullName>CbdLevel__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cbd Level</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>