force-app/main/default/objects/Strain__c/fields/Chemotype_ID__c.field-meta.xml
<CustomField>
    <fullName>Chemotype_ID__c</fullName>
    <label>Chemotype ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>