force-app/main/default/objects/Strain__c/fields/Genotype_ID__c.field-meta.xml
<CustomField>
    <fullName>Genotype_ID__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Genotype ID</label>
    <type>AutoNumber</type>
</CustomField>