force-app/main/default/objects/Strain__c/fields/IndicaPercentage__c.field-meta.xml
<CustomField>
    <fullName>IndicaPercentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Indica Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>