force-app/main/default/objects/Strain__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Uncheck this checkbox if the strain is unused.</description>
    <inlineHelpText>Uncheck this checkbox if the strain is unused.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>