force-app/main/default/objects/Strain__c/fields/Metrc_HttpResponse__c.field-meta.xml
<CustomField>
    <fullName>Metrc_HttpResponse__c</fullName>
    <description>Used for capturing the errors if integration callout fails to sync with Metrc system</description>
    <inlineHelpText>Used for capturing the errors if integration callout fails to sync with Metrc system</inlineHelpText>
    <label>Metrc_HttpResponse</label>
    <length>50768</length>
    <type>LongTextArea</type>
</CustomField>