force-app/main/default/objects/Strain__c/fields/Metrc_StrainID__c.field-meta.xml
<CustomField>
    <fullName>Metrc_StrainID__c</fullName>
    <description>store Metrc_StrainID  from integration</description>
    <externalId>true</externalId>
    <inlineHelpText>store Metrc_StrainID  from integration</inlineHelpText>
    <label>Metrc_StrainID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>