force-app/main/default/objects/Strain__c/fields/Phenotype_ID__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_ID__c</fullName>
    <label>Phenotype ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>