force-app/main/default/objects/Strain__c/fields/SativaPercentage__c.field-meta.xml
<CustomField>
    <fullName>SativaPercentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sativa Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>