force-app/main/default/objects/Strain__c/fields/Strain_Type__c.field-meta.xml
<CustomField>
    <fullName>Strain_Type__c</fullName>
    <label>Strain Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Strain_Type</valueSetName>
    </valueSet>
</CustomField>