force-app/main/default/objects/Strain__c/fields/ThcLevel__c.field-meta.xml
<CustomField>
    <fullName>ThcLevel__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Thc Level</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>