force-app/main/default/objects/Strain__c/fields/Track_Trace_Sync__c.field-meta.xml
<CustomField>
    <fullName>Track_Trace_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If True checkbox, Product is created in External Track and Trace System (i.e. Metrc)</inlineHelpText>
    <label>Track &amp; Trace Sync</label>
    <type>Checkbox</type>
</CustomField>