force-app/main/default/objects/Strain__c/validationRules/No_Duplicates.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Duplicates</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &lt;&gt; LEN(Name)</errorConditionFormula>
    <errorMessage>Duplicate strain name in records | Please reenter correct strain name</errorMessage>
</ValidationRule>