force-app/main/default/objects/Strain__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isActive__c</columns>
    <columns>Strain_Type__c</columns>
    <columns>IndicaPercentage__c</columns>
    <columns>SativaPercentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>