force-app/main/default/objects/Strain__c/listViews/Conception_Nurseries.listView-meta.xml
<ListView>
    <fullName>Conception_Nurseries</fullName>
    <columns>isActive__c</columns>
    <columns>NAME</columns>
    <columns>Strain_Type__c</columns>
    <columns>Genotype_ID__c</columns>
    <columns>Phenotype_ID__c</columns>
    <columns>Chemotype_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Genotype_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Conception Nurseries</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>